# HiFiMapper

./: .clang-format  .clang_format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.py  requirements.txt
cmake/: Content.cmake  Warnings.cmake
mapper/: CMakeLists.txt
mapper/include/mapper/: chaining.hpp  lcp.hpp  nucleic_acid.hpp  parser.hpp  suffix_arr_algo.hpp  suffix_array.hpp
mapper/src/: main.cxx
mapper/src/mapper/: chaining.cxx  lcp.cxx  parser.cxx  suffix_array.cxx
simulator/: CMakeLists.txt  parser.hpp  reads_generator.cpp  reference_generator.cpp
simulator/parser/: CMakeLists.txt
simulator/parser/include/parser/: parser.hpp
simulator/parser/src/: parser.cxx
src/: CMakeLists.txt  chaining.hpp  lcp.hpp  main.cpp  nucleic_acid.hpp  parser_utility.hpp  suffix_array.hpp  suffix_array_linear.hpp
tests/benchmarks/: benchmark1.py  benchmark10.py  benchmark11.py  benchmark12.py  benchmark13.py  benchmark1d1.py  benchmark2.py  benchmark2d1.py  benchmark3.py  benchmark4.py  benchmark5.py  benchmark6.py  benchmark6d1.py  benchmark6r.py  benchmark7.py  benchmark8.py  benchmark9.py  importinfo.py  importscript.sh
tests/benchmarks/benchmark_utils/: __init__.py  data.py  evaluator.py  proxies.py  table.py  utils.py
